fix(frontend): Render text-align in editor correctly

--- a/frontend/src/components/common/rich-text-editor/RichTextEditor.module.scss
+++ b/frontend/src/components/common/rich-text-editor/RichTextEditor.module.scss
@@ -290,4 +290,22 @@
   figure {
     margin: 0;
   }
+
+  :global {
+    .rdw-center-aligned-block .public-DraftStyleDefault-block {
+      text-align: center;
+    }
+
+    .rdw-left-aligned-block .public-DraftStyleDefault-block {
+      text-align: left;
+    }
+
+    .rdw-right-aligned-block .public-DraftStyleDefault-block {
+      text-align: right;
+    }
+
+    .rdw-justify-aligned-block .public-DraftStyleDefault-block {
+      text-align: justify;
+    }
+  }
 }
